--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
 
         <h2>Ajouter un Post-It</h2>
 
-        <div id="div_blue">
-
-
-
-        </div>
+        <div id="div_blue"></div>
 
         <div id="div_green"></div>
 
