--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="barre_gauche">
 
-        <h2>Ajouter un Post-It</h2>
+        <h2>Ajouter un Post-It :</h2>
 
         <div id="div_blue"></div>
 
