--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body>
 
     <div id="barre_gauche">
+        
+        <button onclick="reset_table()">Reset Tableau</button>
 
         <h2>Ajouter un Post-It :</h2>
 
@@ -28,7 +30,6 @@
         <div id="div_pink"></div>
 
     </div>
-
 
 </body>
 </html>
