--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="barre_gauche">
         
-        <button onclick="reset_table()">Reset Tableau</button>
+        <button onclick="reset_table()">Supprimer Tous les Post-It</button>
 
         <h2>Ajouter un Post-It :</h2>
 
