--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
 <body>
 
     <div id="barre_gauche">
-        
-        <button onclick="reset_table()">Supprimer Tous les Post-It</button>
 
         <h2>Ajouter un Post-It :</h2>
 
-        <div id="div_blue"></div>
+        <div id="div_blue" draggable = "true"></div>
 
-        <div id="div_green"></div>
+        <div id="div_green" draggable = "true"></div>
 
-        <div id="div_pink"></div>
+        <div id="div_pink" draggable = "true"></div>
 
     </div>
 
